[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "civ4save"
version = "0.6.3"
description = "Extract data from a .CivBeyondSwordSave file"
readme = "README.md"
authors = [{name = "Dan Davis", email = "dan@dandavis.dev"}]
license = { file = "COPYING" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
]
keywords = ["civ", "civilization", "savefile"]
dependencies = [
    "attrs",
    "click >= 8.1.3",
    "construct >= 2.10.67",
    "importlib-resources >= 5.9.0",
    "Jinja2 >= 3.1.2",
    "lazy-property >= 0.0.1",
    "rich >= 12.5.1",
    "xmltodict >= 0.12.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-isort",
    "flake8-docstrings",
    "mypy",
    "pytest",
    "tox"
]

[project.urls]
Homepage = "https://github.com/danofsteel32/civ4save"

[project.scripts]
civ4save = "civ4save.cli:cli"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests/*"
disallow_untyped_defs = true
