[metadata]
name = civ4save
version = 0.3.0
description = Extract data from a .CivBeyondSwordSave file
author = Dan Davis
author_email = dan@dandavis.dev
license = GPL-3.0-only
long_desription = file: README.md
long_desription_content_type = text/markdown; charset=UTF-8
url = https://github.com/danofsteel32/civ4save

[bdist_wheel]
python-tag = py3

[flake8]
max-line-length = 88

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[options]
packages = find:
python_requires = >=3.10
install_requires =
    construct >= 2.10.68
    Jinja2 >= 3.1.2
    xmltodict >= 0.12.0

[options.extras_require]
dev =
    black >= 22.3.0
    flake8 >= 4.0.1
    flake8-isort >= 4.1.1
    mypy >= 0.961
    pytest >= 7.1.2
